<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.r2devpros.databindingtest.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@{viewModel.title}"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Data Binding Test" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/two_way_data_binding"
            android:inputType="text"
            android:text="@={viewModel.name}"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/last_name"
            android:inputType="text"
            android:text="@={viewModel.lastName}"
            app:layout_constraintTop_toBottomOf="@id/etName" />

        <EditText
            android:id="@+id/etAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:autofillHints=""
            android:hint="@string/age"
            android:inputType="number"
            android:text="@={viewModel.age}"
            app:layout_constraintTop_toBottomOf="@id/etLastName" />

        <TextView
            android:id="@+id/tvLegal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_allowed_to_drink"
            android:textSize="28sp"
            android:visibility="@{viewModel.legalAge}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAge" />

        <TextView
            android:id="@+id/tvNotLegal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_not_allowed_to_drink"
            android:textColor="@{viewModel.ageLessThan18 ? @color/colorRed : @color/colorBlue }"
            android:textSize="28sp"
            android:visibility="@{viewModel.notLegalAge}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLegal" />

        <Button
            android:id="@+id/btnValuesFromServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:onClick="@{() -> viewModel.setValuesFromServer()}"
            android:text="@string/set_values_from_server"
            app:layout_constraintBottom_toTopOf="@id/btnGetValues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnGetValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:onClick="@{() -> viewModel.getValuesFromButton()}"
            android:text="@string/get_values"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>